--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
                 <input class="input" type="search" placeholder="  Search Amazon">
                 <div class="searchicon"><i class="fa-solid fa-magnifying-glass"></i></div>
             </div>
+            <div class="signin border">
+                <p><span>Hello, sign in </span></p>
+                <p class="acc ">Account & Lists </p>
+            </div>
+            <div class="return border">
+                <p><span>Returns </span></p>
+                <p class="acc ">& Orders </p>
+            </div>
+            <div class="cart border">
+                <i class="fa-solid fa-cart-shopping sh"></i>
+                <p class="na">Cart</p>
+            </div>
         </div>
     </header>
 
