--- a/index.html
+++ b/index.html
@@ -41,7 +41,28 @@
                 <p class="na">Cart</p>
             </div>
         </div>
+        <div class="panal">
+            <div class="all">
+                <i class="fa-solid fa-bars"></i>
+                <p>All</p>
+            </div>
+            <div class="deals">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+            <div class="now">
+                <p>Shop freat deals now</p>
+            </div>
+        </div>
     </header>
+    <main>
+        <div class="mainimg">
+            
+        </div>
+    </main>
 
 </body>
 </html>
