added product detail

--- a/index.html
+++ b/index.html
@@ -59,8 +59,88 @@
         </div>
     </header>
     <main>
-        <div class="mainimg">
-            
+        <div class="background">
+            <div class="mainimg">
+                <div class="heromsg">
+                    <p>you are on amazon.com. you can also shop on Amazon India for million of products with fast local delivery . <a href="https://www.amazon.in/">click here to go to amazon.in</a></p>
+                </div>   
+            </div>
+            <div class="contantbox">
+                <div class="box11 boxsize">
+                    <p>Soft dresses</p>
+                    <div class="bimg1"></div>
+                    <a href="https://www.amazon.com/s?i=fashion-womens&bbn=16334314011&rh=n%3A7141123011%2Cn%3A16334314011%2Cn%3A7147440011%2Cn%3A1040660%2Cn%3A1045024%2Cp_89%3ADaily+Ritual&pf_rd_r=VGVE2GGQ42THAES8Z0WT&qid=1595545753&rnid=2528832011l&ref=af_gw_spb_topcatcard_sum_DR_dress">Shop Daily Ritual's dresses</a>
+                </div>
+                <div class="box22 boxsize">
+                    <p id="only">Customers' most-loved</p>
+                    <div class="gosimg">
+                        <div class="simg">
+                            <div class="simg1"></div>
+                            <p>Women's fashion</p>
+                        </div>
+                        <div class="simg">
+                            <div class="simg2"></div>
+                            <p>Men's fashion</p>
+                        </div>
+                        <div class="simg">
+                            <div class="simg3"></div>
+                            <p>Beauty</p>
+                        </div>
+                        <div class="simg">
+                            <div class="simg4"></div>
+                            <p>Home</p>
+                        </div>
+                    </div>
+                    <a href="https://www.amazon.com/gp/browse.html?node=20850246011&ref_=af_gw_quadtopcard_f_july_xcat_cml&pf_rd_r=41SQQ70T3JXJW6B7TCTM">Discover items with 4+ stars</a>
+                </div>
+                <div class="box22 boxsize">
+                    <p id="only">Customers' most-loved</p>
+                    <div class="gosimg">
+                        <div class="simg">
+                            <div class="simg1"></div>
+                            <p>Women's fashion</p>
+                        </div>
+                        <div class="simg">
+                            <div class="simg2"></div>
+                            <p>Men's fashion</p>
+                        </div>
+                        <div class="simg">
+                            <div class="simg3"></div>
+                            <p>Beauty</p>
+                        </div>
+                        <div class="simg">
+                            <div class="simg4"></div>
+                            <p>Home</p>
+                        </div>
+                    </div>
+                    <a href="https://www.amazon.com/gp/browse.html?node=20850246011&ref_=af_gw_quadtopcard_f_july_xcat_cml&pf_rd_r=41SQQ70T3JXJW6B7TCTM">Discover items with 4+ stars</a>
+                </div>
+                <div class="box44 boxsize">
+                    <p>Best Sellers in Outlet</p>
+                    <div class="bimg2"></div>
+                    <a href="https://www.amazon.com/b/ref=OUT_BS_DSC_D_EN_US?node=17900676011&pf_rd_r=41SQQ70T3JXJW6B7TCTM">Shop now</a>
+                </div>
+                <div class="box55 boxsize">
+                    <p>Small space solutions</p>
+                    <div class="bimg3"></div>
+                    <a href="https://www.amazon.com/gp/browse.html?node=21385226011&ref_=0824_smallspaces&pf_rd_r=41SQQ70T3JXJW6B7TCTM">Shop small space furniture & décor</a>
+                </div>
+                <div class="box66 boxsize">
+                    <p>Save on pre-owned Amazon devices</p>
+                    <div class="bimg4"></div>
+                    <a href="https://www.amazon.com/gp/browse.html?node=8497978011&ref_=ods_gw_refurb_d_xpl_evrgn&pf_rd_r=41SQQ70T3JXJW6B7TCTM">Shop small space furniture & décor</a>
+                </div>
+                <div class="box77 boxsize">
+                    <p>Live plants & planters</p>
+                    <div class="bimg5"></div>
+                    <a href="https://www.amazon.com/b?node=1055398">Shop small space furniture & décor</a>
+                </div>
+                <div class="box88 boxsize">
+                    <p>Easy, elevated t-shirts</p>
+                    <div class="bimg6"></div>
+                    <a href="https://www.amazon.com/stores/page/2712FB81-2E38-404F-ADE3-2858C4903F3A?channel=SB_gway&ref=sb_w_i_ctcdx_tshrt&pf_rd_r=41SQQ70T3JXJW6B7TCTM">Shop small space furniture & décor</a>
+                </div>
+            </div>
         </div>
     </main>
 
