added half footer

--- a/index.html
+++ b/index.html
@@ -143,6 +143,79 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="newcus">
+            <p id="p1">See personalized recommendations</p>
+            <button>Sign in</button>
+            <p id="p2">New customer? <a href="https://www.amazon.com/ap/register?openid.mode=checkid_setup&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&openid.return_to=https%3A%2F%2Fwww.amazon.com%2Fref%3Drhf_sign_in&openid.assoc_handle=usflex">Start here</a></p>
+        </div>
+        <div class="backto">
+            <p>back to top</p>
+        </div>
+        <div class="amazonhelp">
+            <div class="knowus siandco">
+                <h6>Get to Know Us</h6>
+                <br>
+                <p>Careers</p>
+                <br>
+                <p>Blog</p>
+                <br>
+                <p>About Amazon</p>
+                <br>
+                <p>Investor Relations</p>
+                <br>
+                <p>Amazon Devices</p>
+                <br>
+                <p>Amazon Science</p>
+            </div>
+            <div class="moneyus siandco">
+                <h6>Make Money with Us</h6>
+                <br>
+                <p>Sell products on Amazon</p>
+                <br>
+                <p>Sell on Amazon Business</p>
+                <br>
+                <p>Sell apps on Amazon</p>
+                <br>
+                <p>Become an Affiliate</p>
+                <br>
+                <p>Advertise Your Products</p>
+                <br>
+                <p>Self-Publish with Us</p>
+                <br>
+                <p>Host an Amazon Hub</p>
+                <br>
+                <p>›See More Make Money with Us</p>
+            </div>
+            <div class="paypro siandco ">
+                <h6>Amazon Payment Products</h6>
+                <br>
+                <p>Amazon Business Card</p>
+                <br>
+                <p>Shop with Points</p>
+                <br>
+                <p>Reload Your Balance</p>
+                <br>
+                <p>Amazon Currency Converter</p>
+            </div>
+            <div class="helpyou siandco">
+                <h6>Let Us Help You</h6>
+                <br>
+                <p>Amazon and COVID-19</p>
+                <br>
+                <p>Your Account</p>
+                <br>
+                <p>Your Orders</p>
+                <br>
+                <p>Shipping Rates & Policies</p>
+                <br>
+                <p>Manage Your Content and Devices</p>
+                <br>
+                <p>Help</p>
+            </div>
+
+        </div>
+    </footer>
 
 </body>
 </html>
